src/objects/Incident_Contact__c.object
<CustomObject>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>9 and under</fullName>
                </value>
                <value>
                    <fullName>10-16</fullName>
                </value>
                <value>
                    <fullName>17-21</fullName>
                </value>
                <value>
                    <fullName>22-30</fullName>
                </value>
                <value>
                    <fullName>31-45</fullName>
                </value>
                <value>
                    <fullName>45-60</fullName>
                </value>
                <value>
                    <fullName>61 and over</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gang_Affiliation__c</fullName>
        <label>Gang Affiliation</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Suspected</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
                <value>
                    <fullName>N/A</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Male</fullName>
                </value>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Incident__c</fullName>
        <label>Incident</label>
        <referenceTo>Incident__c</referenceTo>
        <relationshipLabel>Incident Contacts</relationshipLabel>
        <relationshipName>Incident_Contacts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Person_Num__c</fullName>
        <label>Person #</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Race_Ethnicity__c</fullName>
        <label>Race/Ethnicity</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>White</fullName>
                </value>
                <value>
                    <fullName>Black</fullName>
                </value>
                <value>
                    <fullName>Hispanic</fullName>
                </value>
                <value>
                    <fullName>Asian</fullName>
                </value>
                <value>
                    <fullName>American Indian</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Vehicle_Make__c</fullName>
        <label>Vehicle Make</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Model__c</fullName>
        <label>Vehicle Model</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Vehicle_Year__c</fullName>
        <label>Vehicle Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>Incident Contact</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CT-{00000000}</displayFormat>
        <label>Contact Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Incident Contacts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>